[tool.poetry]
name = "stramate"
version = "0.1.0"
description = "Your Strava mate"
authors = ["manhtai <vo@manhtai.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
dj-database-url = "^0.5.0"
whitenoise = "^5.3.0"
django-tailwind = "^2.2.1"
social-auth-app-django = "^5.0.0"
heroicons = {extras = ["django"], version = "^1.3.0"}
huey = "^2.4.1"
stravalib = "^0.10.4"
geocoder = "^1.38.1"
polyline = "^1.4.0"
django-dotenv = "^1.4.2"
django-grappelli = "^2.15.3"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
honcho = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
